feat(context/rendering): Vulkan Graphic API Crash SIGSEGV NOTE
Note personnel sur un crash SIGSEGV sous Vulkan.

Bug JIT C2 | JDK 25.0.1 (Microsoft-12574222) (--sun-misc-unsafe-memory-access=allow)